# HomeworkQt5

./: CMakeLists.txt  Stopwatch.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.h
